--- a/resources/views/users/edit.twig
+++ b/resources/views/users/edit.twig
@@ -76,6 +76,13 @@
                         <span class="help-block">{{ errors.province | first }}</span>
                     {% endif %}
                 </div>
+                <div class="form-group {{ errors.skills ? 'has-error' : '' }}">
+                    <textarea class="form-control login-field" name="skills" placeholder="List your skills - e.g. PHP, Laravel" rows="3"></textarea>
+                    <label class="login-field-icon fui-user" for="skills"></label>
+                    {% if errors.skills %}
+                        <span class="help-block">{{ errors.skills | first }}</span>
+                    {% endif %}
+                </div>
                 <button class="btn btn-primary btn-lg btn-block" type="submit">Submit</button>
                 {{ csrf.field | raw }}
             </form>
